[package]
name = "csv-tools"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A Rust crate for reading, creating and manipulating CSV files easily"
authors = ["ThomasGysemans<support@sciencesky.fr>"]
repository = "https://github.com/ThomasGysemans/csv-tools"
readme = "README.md"
keywords = ["csv", "parse csv", "create csv", "edit csv"]
categories = ["parsing", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[dependencies]
